--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
   body {
     background-color: rgb(252, 255, 82);
     color: rgb(0, 0, 0);
-    font-size: 16px;
+    font-size: 30px;
     font-family: sans-serif;
-    line-height: 1.4;}
+  }
 </style>
-
-<div></div>
+<style>
+img {
+  border-radius: 10%;
+  max-width: 20%;
+  height: 35;
+}
+</style>
 
 <body>
 <h3>Lisa Korneichuk is an art journalist, editor at <a href="https://vonopaper.com/">VONO</a>, and text-based creator. 
   </h3>
-  <br>
   <h3>
-    Lisa loves slow writing, <img src="images.png" alt="blue waves icon on white background">, and catering.
+    Lisa loves slow writing, 
+    <img src="images.png" alt="blue waves icon on white background">, and catering.
   </h3>
 </body>
