--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     color: rgb(0, 0, 0);
     font-size: 30px;
     font-family: sans-serif;
-  }
-</style>
-<style>
+    margin: 50px 50px 50px 50px;}
 img {
   border-radius: 10%;
   max-width: 20%;
-  height: 35;
-}
+  height: 35;}
+a {color: blue;}
+  a:hover {
+  color: yellow;}
 </style>
 
 <body>
-<h3>Lisa Korneichuk is an art journalist, editor at <a href="https://vonopaper.com/">VONO</a>, and text-based creator. 
+  <h3>Lisa Korneichuk is an art journalist, editor at <a href="https://vonopaper.com/">VONO</a>, and text-based creator. 
   </h3>
   <h3>
     Lisa loves slow writing, 
-    <img src="images.png" alt="blue waves icon on white background">, and catering.
+    <img src="images.png" alt="blue waves icon on white background">, dancing, <img src="bike.png" alt="an icon of a bike">, dancing,  and catering. Based in Chicago and Kyiv.
   </h3>
 </body>
