--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     font-size: 30px;
     font-family: sans-serif;
     margin: 50px 50px 50px 50px;}
+  section {
+    background-color: white;
+    position: relative;
+    z-index: 3;
+    max-width: 500px;
+    max-height: 1000px;
+    margin: 25px 25px 25px 5px;
+    border: 9px solid #0000ff;
+  }
+
 img {
   border-radius: 10%;
   max-width: 20%;
@@ -21,4 +31,17 @@ a {color: blue;}
     Lisa loves slow writing, 
     <img src="images.png" alt="blue waves icon on white background">, dancing, <img src="bike.png" alt="an icon of a bike">, dancing,  and catering. Based in Chicago and Kyiv.
   </h3>
-</body>
+  </body>
+  
+  <section>
+    <div class="bg">
+      <h1 class="pink-box">Hello World Wide Web</h1>
+
+      <p>
+        Hello World Wide Web,
+        <a class="pink-box" href="https://netizen.org">here's a link</a>
+        here's another <a href="https://netizen.org">link</a>
+        and <a href="https://netizen.org">another</a>
+      </p>
+    </div>
+  </section>
