--- a/index.html
+++ b/index.html
@@ -5,16 +5,35 @@
     font-size: 30px;
     font-family: sans-serif;
     margin: 50px 50px 50px 50px;}
+  .p1 {
+    font-size: 20px;
+  }
+  .p2 {
+    font-size: 25px;
+  }
   section {
     background-color: white;
     position: relative;
-    z-index: 3;
-    max-width: 500px;
+    z-index: 1;
+    max-width: 800px;
     max-height: 1000px;
-    margin: 25px 25px 25px 5px;
-    border: 9px solid #0000ff;
+    margin: 25px 25px 25px 25px;
+    border: 10px double #0000ff;
+    padding: 20px 20px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   }
-
+button {
+  border: solid #0000ff;
+  background-color: rgb(252, 255, 82);
+  padding: 10px 60px;
+  margin-left: 230px;
+  text-align: right;
+  display: inline-block;
+  font-size: 16px;
+  font-family: serif;
+  font-style: bold;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 img {
   border-radius: 10%;
   max-width: 20%;
@@ -34,14 +53,25 @@ a {color: blue;}
   </body>
   
   <section>
-    <div class="bg">
-      <h1 class="pink-box">Hello World Wide Web</h1>
+      <center>
+      <h3> Lights of Kuyalnyk </h3>
+      <p class="p1">article</p>
+</center>
 
-      <p>
-        Hello World Wide Web,
-        <a class="pink-box" href="https://netizen.org">here's a link</a>
-        here's another <a href="https://netizen.org">link</a>
-        and <a href="https://netizen.org">another</a>
+      <p class="p2">
+      Published on VONO. February 2021.
       </p>
-    </div>
+    <button>READ</button>
+  </section>
+<br>
+  <section>
+      <center>
+      <h3> Design-stories</h3>
+      <p class="p1">podcast</p>
+</center>
+
+      <p class="p2">
+      Published on Hexagon.Agency. July 2021—Present.
+      </p>
+    <button>LISTEN</button>
   </section>
