--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@ button {
   border: solid #0000ff;
   background-color: rgb(252, 255, 82);
   padding: 10px 60px;
-  margin-left: 230px;
+  margin: 4px 110px;
   text-align: right;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   font-family: serif;
   font-style: bold;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+  button:hover {background-color:white;}
+  
 img {
   border-radius: 10%;
   max-width: 20%;
@@ -61,7 +63,7 @@ a {color: blue;}
       <p class="p2">
       Published on VONO. February 2021.
       </p>
-    <button>READ</button>
+     <a href="http://kuyalnyk_eng.vonopaper.com/"> <button>READ</button> </a>
   </section>
 <br>
   <section>
