links to buttons

--- a/index.html
+++ b/index.html
@@ -75,5 +75,5 @@ a {color: blue;}
       <p class="p2">
       Published on Hexagon.Agency. July 2021—Present.
       </p>
-    <button>LISTEN</button>
+<a href="https://open.spotify.com/show/0dd6A4UuZs8XGdqWSYkA1b"> <button>LISTEN</button> </a>
   </section>
