--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@ img {
 a {color: blue;}
   a:hover {
   color: yellow;}
+  footer {
+  background-color: white;
+  font-size: 15px;
+  padding: 10px;
+  text-align: left;
+  color: blue;
+}
 </style>
 
 <body>
-  <h3>Lisa Korneichuk is an art journalist, editor at <a href="https://vonopaper.com/">VONO</a>, and text-based creator. 
+  <h3>Lisa Writersblock is an art journalist, editor at <a href="https://vonopaper.com/">VONO</a>, and text-based creator. 
   </h3>
   <h3>
     Lisa loves slow writing, 
@@ -77,3 +84,5 @@ a {color: blue;}
       </p>
 <a href="https://open.spotify.com/show/0dd6A4UuZs8XGdqWSYkA1b"> <button>LISTEN</button> </a>
   </section>
+<footer> email to lisakorneichuk@gmail.com <br>
+©LisaWritersblock.2021</footer>
