--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     margin: 50px 50px 50px 50px;}
   .p1 {
     font-size: 20px;
+    background-color: rgba(189, 193, 198, 0.81)
   }
   .p2 {
-    font-size: 25px;
+    font-size: 22px;
   }
   section {
     background-color: white;
@@ -84,5 +85,15 @@ a {color: blue;}
       </p>
 <a href="https://open.spotify.com/show/0dd6A4UuZs8XGdqWSYkA1b"> <button>LISTEN</button> </a>
   </section>
-<footer> email to lisakorneichuk@gmail.com <br>
-©LisaWritersblock.2021</footer>
+  <section>
+      <center>
+      <h3> Spirzen Schneider</h3>
+      <p class="p1">movie</p>
+</center>
+      <p class="p2">
+      Made with support of Viadrinicum Summer School. 2019.
+      </p>
+<a href="https://vimeo.com/361252220?1&ref=fb-share&fbclid=IwAR2-KbCry_epbwWPAQ9AOsGd_K8oZYJuKHZStUU0ELfW8_KlD0W3Sxkb8q0"> <button>WATCH</button> </a>
+  </section>
+<footer> email to lisakorneichuk@gmail.com 
+  <br>©LisaWritersblock—2021</footer>
