--- a/index.html
+++ b/index.html
@@ -73,13 +73,11 @@ a {color: blue;}
       </p>
      <a href="http://kuyalnyk_eng.vonopaper.com/"> <button>READ</button> </a>
   </section>
-<br>
   <section>
       <center>
       <h3> Design-stories</h3>
       <p class="p1">podcast</p>
 </center>
-
       <p class="p2">
       Published on Hexagon.Agency. July 2021—Present.
       </p>
@@ -87,13 +85,14 @@ a {color: blue;}
   </section>
   <section>
       <center>
-      <h3> Spirzen Schneider</h3>
-      <p class="p1">movie</p>
+      <h3> Hey, tought boy</h3>
+      <p class="p1">interview</p>
 </center>
       <p class="p2">
-      Made with support of Viadrinicum Summer School. 2019.
+     Published on VONO. 2020.
       </p>
-<a href="https://vimeo.com/361252220?1&ref=fb-share&fbclid=IwAR2-KbCry_epbwWPAQ9AOsGd_K8oZYJuKHZStUU0ELfW8_KlD0W3Sxkb8q0"> <button>WATCH</button> </a>
-  </section>
+     <a href="http://bogdanmoroz.vonopaper.com/"> <button>READ</button> </a>
+</section>
+
 <footer> email to lisakorneichuk@gmail.com 
   <br>©LisaWritersblock—2021</footer>
