--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <style>
   body {
-    background-color: rgb(252, 255, 82);
-    color: rgb(0, 0, 0);
+    background-color: yellow;
     font-size: 30px;
+    color: black;
     font-family: sans-serif;
     margin: 50px 50px 50px 50px;}
   .p1 {
@@ -21,8 +21,7 @@
     margin: 25px 25px 25px 25px;
     border: 10px double #0000ff;
     padding: 20px 20px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  }
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); }
 button {
   border: solid #0000ff;
   background-color: rgb(252, 255, 82);
@@ -85,7 +84,7 @@ a {color: blue;}
   </section>
   <section>
       <center>
-      <h3> Hey, tought boy</h3>
+      <h3> Hey, tough boy</h3>
       <p class="p1">interview</p>
 </center>
       <p class="p2">
